fixed layout bugs

--- a/style/index.css
+++ b/style/index.css
@@ -5,13 +5,9 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-h1, h2 {
+h1 {
   font-family: 'Merriweather', serif;
   text-align: center;
-}
-
-
-h1 {
   color: #ffffff;
   font-size: 50px;
   letter-spacing: 5px;
@@ -19,12 +15,23 @@ h1 {
 
 /* TITLE FONT */
 h2 {
+  font-family: 'Merriweather', serif;
+  text-align: center;
   font-size: 30px;
   letter-spacing: 2px;
+  color: #527571;
+}
+
+h2 a:visited {
+  color: #527571;
+}
+
+h2 a {
+  color: #527571;
 }
 
 h2 a:hover {
-  color: 	#527571;
+  color: 	#2A4034;
 }
 
 h5 {
@@ -32,26 +39,31 @@ h5 {
   margin-top: 20px;
 
   font-style: italic;
-  font-size: 13px;
+  font-size: 14px;
   letter-spacing: 1.5px;
   color: #D0D0D0;
   line-height: 23px;
+  text-align: center;
   }
-  
-h5.author span {
+
+.author-span {
   background: #fff;
   padding: 0 10px;
   position: relative;
   z-index: 5;
-  
 }
 
-h5.author+p {
+.author+.fill {
   border-top: solid 1px #ececec;
   padding-top: 40px;
-  margin-top: -38px;
+  margin-top: -37px;
 }
 
+.author-show+.fill {
+  border-top: solid 1px #ececec;
+  padding-top: 40px;
+  margin-top: -35px;
+}
 
 a {
     text-decoration: none;
@@ -81,15 +93,6 @@ p {
   list-style-type: none;
 }
 
-.container-content a {
-  color: #000000;
-}
-
-.container-content h5 {
-  margin-top: 37px;
-  margin-bottom: 27px;
-}
-
 .nav li a {
   color: #ffffff;
 }
@@ -113,7 +116,6 @@ ul {
 
 
 .container {
-  background: black;
   display: block;
   border: solid;
   border-radius: 3px;
@@ -121,9 +123,8 @@ ul {
   border-color: #e3e3e3;
   background-color: #ffffff;
   margin: 55px auto 55px auto;
-  padding: 45px 0 40px 0;
-  width: 800px;
-  max-width: 90%;
+  padding: 45px 0 45px 0;
+  max-width: 63%;
 }
 
 .container-list {
@@ -134,8 +135,17 @@ ul {
   margin: 0 100px 0 100px;
 }
 
-.title-show h2 {
-  padding-bottom: 20px;
+.container-content a {
+  color: #000000;
+}
+
+.container-content .author {
+  margin-top: 37px;
+  margin-bottom: 25px;
+}
+
+.container-show {
+  margin: 0 70px 0 70px;
 }
 
 .email {
@@ -144,15 +154,10 @@ ul {
 
 /* HORIZONTAL LINES */
 
-span.short {
-  background:#fff;
-  padding:0 10px;
-}
-
-hr.long {
-  margin: 50px 0px 50px 0px;
+.long {
+  margin: 50px 0 50px 0; 
   border: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-top: 1px solid #ececec;
 }
 
 .spinner {
@@ -209,52 +214,12 @@ hr.long {
 	position:relative;
 	top:1px;
 }
-/*
-  .nav li {  
-    padding: 0 15px 0 15px;
-  }
-
-  .container {
-    max-width: 95%;
-  }
-
-  .container-content {
-    margin-left: 30px;
-    margin-right: 30px;
-  }
-*/
-
-/*
-@media screen and (min-device-width: 380px) and (max-device-width: 470px)  {
-
-
-  body{ background-color: black;}
-}
-
-@media screen and (min-width : 240px) and (max-width: 375px) {
-
-  .nav li {  
-    padding: 0 15px 0 15px;
-  }
-
-  .container {
-    max-width: 95%;
-  }
-
-  .container-content {
-    margin-left: 30px;
-    margin-right: 30px;
-  }
-
-}
-*/
-
 
 /* phones and lower */
 @media screen and (max-width:760px){
     
   .nav li {  
-    padding: 0 15px 0 15px;
+    padding: 0 20px 0 20px;
   }
 
   .container {
@@ -262,10 +227,13 @@ hr.long {
   }
 
   .container-content {
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 65px;
+    margin-right: 65px;
   }
 
+  .container-show {
+    margin: 0 45px 0 45px;
+  }
 
 }
 
@@ -284,6 +252,10 @@ hr.long {
   .container-content {
     margin-left: 30px;
     margin-right: 30px;
+  }
+
+  .container-show {
+    margin: 0 30px 0 30px;
   }
 }
 
